kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aibot24-enterprise-dashboard-service
  namespace: apps
spec:
  selector:
    app: aibot24-enterprise-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9002
  type: ClusterIP
